test/error/sema/unnecessary-optional-chain.dsk
let x = 1
echo(x?.foo)
